--- a/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/EntityInterfaces.mustache
+++ b/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/EntityInterfaces.mustache
@@ -9,9 +9,9 @@ namespace {{EntitiesBaseNamespace}}
 {{#Interfaces}}
 
     /// <summary>
-    /// Defines available properties and methods for the abstraction of the {{Name}} model.
+    /// Defines available properties and methods for the abstraction of the {{ModelName}} model.
     /// </summary>
-    public interface I{{Name}}{{ImplementedInterfaces}}
+    public interface I{{ModelName}}{{ImplementedInterfaces}}
     {
         // Primary Key properties
     {{#ParentClassName}}
@@ -42,13 +42,13 @@ namespace {{EntitiesBaseNamespace}}
     {{#HasNavigableOneToOnes}}
         {{#NavigableOneToOnes}}
 
-        I{{Name}} {{Name}} { get; set; }
+        I{{ItemTypeName}} {{PropertyName}} { get; set; }
         {{/NavigableOneToOnes}}
     {{/HasNavigableOneToOnes}}
 
         // Lists
     {{#Lists}}
-        ICollection<I{{Name}}> {{PluralName}} { get; set; }
+        ICollection<I{{ItemTypeName}}> {{PropertyName}} { get; set; }
     {{/Lists}}
 
         // Resource reference data
@@ -58,6 +58,44 @@ namespace {{EntitiesBaseNamespace}}
         string {{AggregateReferenceName}}Discriminator { get; set; }
         {{/MappedReferenceDataHasDiscriminator}}
     {{/AggregateReferences}}
+    }
+    
+    // Synchronization context
+    /// <summary>
+    /// Defines properties that indicate whether a particular property of the model abstraction
+    /// is supported by a model implementation being used as the source in a "synchronization"
+    /// operation.
+    /// </summary>
+    public class {{ModelName}}SynchronizationContext {{#IsExtendable}}: IExtensionsSynchronizationSourceSupport{{/IsExtendable}}
+    {
+        public {{ModelName}}SynchronizationContext(
+    {{#SynchronizationContextMembers}}
+       {{^ItemTypeName}}
+            bool is{{PropertyName}}Supported{{^IsLast}},{{/IsLast}}
+       {{/ItemTypeName}}
+       {{#ItemTypeName}}
+            Func<I{{ItemTypeName}}, bool> is{{PropertyName}}Included{{^IsLast}},{{/IsLast}}
+       {{/ItemTypeName}}
+    {{/SynchronizationContextMembers}}
+        {
+    {{#SynchronizationContextMembers}}
+        {{^ItemTypeName}}
+            Is{{PropertyName}}Supported = is{{PropertyName}}Supported;
+        {{/ItemTypeName}}
+        {{#ItemTypeName}}
+            Is{{PropertyName}}Included = is{{PropertyName}}Included;
+        {{/ItemTypeName}}
+    {{/SynchronizationContextMembers}}
+        }
+    
+    {{#SynchronizationContextMembers}}
+        {{^ItemTypeName}}
+        public bool Is{{PropertyName}}Supported { get; }
+        {{/ItemTypeName}}
+        {{#ItemTypeName}}
+        public Func<I{{ItemTypeName}}, bool> Is{{PropertyName}}Included { get; }
+        {{/ItemTypeName}}
+    {{/SynchronizationContextMembers}}
     }
 {{/Interfaces}}
 }
