--- a/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/Entities.mustache
+++ b/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/Entities.mustache
@@ -14,6 +14,7 @@ using EdFi.Ods.Api.NHibernate;
 using EdFi.Ods.Api.NHibernate.Architecture;
 using EdFi.Ods.Api.Validation;
 using EdFi.Ods.Common;
+using EdFi.Ods.Common.Models;
 using EdFi.Ods.Common.Extensions;
 {{#HasExtensionDerivedFromEdFiBaseEntity}}
 using EdFi.Ods.Entities.Common.EdFi;
@@ -144,7 +145,7 @@ namespace {{AggregateNamespace}}
     [Serializable, Schema("{{SchemaName}}")]
     [ExcludeFromCodeCoverage]
     public {{#IsAbstract}}abstract {{/IsAbstract}}class {{ClassName}}{{#IsConcreteEntityBaseClass}}Base{{/IsConcreteEntityBaseClass}}{{#IsConcreteEntityChildClassForBase}}ForBase{{/IsConcreteEntityChildClassForBase}} : {{#IsDerived}}{{BaseAggregateRootRelativeNamespace}}{{#IsConcreteEntityBaseClass}}Base{{/IsConcreteEntityBaseClass}}{{/IsDerived}}{{^IsDerived}}{{#IsAggregateRoot}}AggregateRootWithCompositeKey{{/IsAggregateRoot}}{{^IsAggregateRoot}}EntityWithCompositeKey{{/IsAggregateRoot}}{{/IsDerived}},{{^IsAggregateRoot}} IChildEntity,{{/IsAggregateRoot}}{{#AllowsPrimaryKeyUpdates}} IHasCascadableKeyValues,{{/AllowsPrimaryKeyUpdates}}
-        {{NamespacePrefix}}I{{ClassName}}, {{RecordNamespacePrefix}}I{{ClassName}}Record, IHasPrimaryKeyValues{{#HasAlternateKeyValues}}, IHasAlternateKeyValues{{/HasAlternateKeyValues}}, IHasLookupColumnPropertyMap{{^IsAbstract}}, {{NamespacePrefix}}I{{ClassName}}SynchronizationSourceSupport{{/IsAbstract}}{{#IsDescriptor}}, IEdFiDescriptor{{/IsDescriptor}}{{#ExtendableConcreteBase}}, IHasExtensions{{/ExtendableConcreteBase}}
+        {{NamespacePrefix}}I{{ClassName}}, {{RecordNamespacePrefix}}I{{ClassName}}Record, IHasPrimaryKeyValues{{#HasAlternateKeyValues}}, IHasAlternateKeyValues{{/HasAlternateKeyValues}}, IHasLookupColumnPropertyMap{{^IsAbstract}}, IHasSynchronizationContext<{{NamespacePrefix}}{{ClassName}}SynchronizationContext>{{/IsAbstract}}{{#IsDescriptor}}, IEdFiDescriptor{{/IsDescriptor}}{{#IsExtendable}}{{^ExtendableConcreteBase}}, IHasExtensions, IHasExtensionsSynchronizationContext{{/ExtendableConcreteBase}}{{/IsExtendable}}
     {
         {{^IsDerived}}
         public virtual void SuspendReferenceAssignmentCheck() { }
@@ -622,40 +623,20 @@ namespace {{AggregateNamespace}}
         // =========================================
         //        Synchronization Context
         // -----------------------------------------
-        {{NamespacePrefix}}{{ClassName}}SynchronizationContext IHasSynchronizationContext.SynchronizationContext { get; set; }
+        private {{NamespacePrefix}}{{ClassName}}SynchronizationContext _synchronizationContext;
+            
+        {{NamespacePrefix}}{{ClassName}}SynchronizationContext IHasSynchronizationContext<{{NamespacePrefix}}{{ClassName}}SynchronizationContext>.SynchronizationContext
+        {
+            get { return _synchronizationContext; }
+            set { _synchronizationContext = value; }
+        }
         // -----------------------------------------
         {{/IsAbstract}}
         {{#IsExtendable}}
         {{^ExtendableConcreteBase}}
-        private readonly HashSet<string> _excludedExtensions = new HashSet<string>(StringComparer.InvariantCultureIgnoreCase);
-
-        public{{#IsConcreteEntityBaseClass}} virtual{{/IsConcreteEntityBaseClass}} bool IsExtensionSupported(string name)
-        {
-            return !_excludedExtensions.Contains(name);
-        }
-
-        public{{#IsConcreteEntityBaseClass}} virtual{{/IsConcreteEntityBaseClass}} void SetExtensionSupported(string name, bool isSupported)
-        {
-            if (isSupported)
-                _excludedExtensions.Remove(name);
-            else
-                _excludedExtensions.Add(name);
-        }
-
-        private readonly HashSet<string> _availableExtensions = new HashSet<string>(StringComparer.InvariantCultureIgnoreCase);
-
-        public bool IsExtensionAvailable(string name)
-        {
-            return _availableExtensions.Contains(name);
-        }
-
-        public void SetExtensionAvailable(string name, bool isAvailable)
-        {
-            if (isAvailable)
-                _availableExtensions.Add(name);
-            else
-                _availableExtensions.Remove(name);
-        }
+    
+        IExtensionsSynchronizationContext IHasExtensionsSynchronizationContext.SynchronizationContext 
+                => (IExtensionsSynchronizationContext) _synchronizationContext; 
         {{/ExtendableConcreteBase}}
         {{/IsExtendable}}
     }
