--- a/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/EntityMapper.mustache
+++ b/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/EntityMapper.mustache
@@ -8,6 +8,7 @@ using EdFi.Ods.Common;
 using EdFi.Ods.Common.Constants;
 using EdFi.Ods.Common.Conventions;
 using EdFi.Ods.Common.Extensions;
+using EdFi.Ods.Common.Models;
 {{#HasDerivedResources}}
 using EdFi.Ods.Entities.Common.EdFi;
 {{/HasDerivedResources}}
@@ -24,14 +25,15 @@ namespace {{NamespaceName}} //.{{AggregateName}}Aggregate
         {
             bool isModified = false;
 
-            var synchronizationContext = (source as I{{ModelName}}HasSynchronizationContext<{{ModelName}}SynchronizationContext>)
+            var synchronizationContext = (source as IHasSynchronizationContext<{{ModelName}}SynchronizationContext>)
                 .SynchronizationContext;
             {{#IsEntityExtension}}
 
-            var sourceExtensionSupport = source.{{ModelParentName}} as IExtensionsSynchronizationSourceSupport;
-
-            if (!sourceExtensionSupport.IsExtensionAvailable("{{ExtensionName}}"))
-                return false;
+            // SPIKE NOTE: Need to deal with this.
+            // var extensionsSynchronizationContext = source.{{ModelParentName}} as IHasExtensionsSynchronizationContext;
+            //    
+            // if (!extensionsSynchronizationContext.IsExtensionAvailable("{{ExtensionName}}"))
+            //    return false;
             {{/IsEntityExtension}}
             {{#AllowPrimaryKeyUpdates}}
 
@@ -130,7 +132,8 @@ namespace {{NamespaceName}} //.{{AggregateName}}Aggregate
                     source.{{OtherClassPlural}}.SynchronizeCollectionTo(
                         target.{{OtherClassPlural}}, 
                         onChildAdded: child => child.{{BaseClassName}} = target,
-                        includeItem: item => synchronizationContext?.Is{{OtherClassSingular}}Included != false);
+                        includeItem: item => synchronizationContext?.Is{{OtherClassSingular}}Included(item) != false);
+            }
 
             {{/BaseNavigableChildrenList}}
             {{/IsDerivedEntity}}
@@ -151,7 +154,7 @@ namespace {{NamespaceName}} //.{{AggregateName}}Aggregate
                                 (child as IChildEntity)?.SetParent(target.{{ParentName}});
                 {{/IsExtensionClass}}
                             },
-                        includeItem: item => synchronizationContext?.Is{{ChildClassSingular}}Included != false);
+                        includeItem: item => synchronizationContext?.Is{{ChildClassSingular}}Included(item) != false);
             }
 
             {{/NavigableChildrenList}}
@@ -172,8 +175,8 @@ namespace {{NamespaceName}} //.{{AggregateName}}Aggregate
         public static void MapTo(this I{{ModelName}} source, I{{ModelName}} target, Action<I{{ModelName}}, I{{ModelName}}> onMapped)
         {{/IsBaseClassConcrete}}
         {
-            var synchronizationContext = (source as IHasSynchronizationContext<{{ModelName}}>).SynchronizationContext;
-            (target as IHasSynchronizationContext<{{ModelName}}>).SynchronizationContext = synchronizationContext;
+            var synchronizationContext = (source as IHasSynchronizationContext<{{ModelName}}SynchronizationContext>).SynchronizationContext;
+            (target as IHasSynchronizationContext<{{ModelName}}SynchronizationContext>).SynchronizationContext = synchronizationContext;
 
             {{#IsBaseEntity}}
             // =======================================================================================
